# faster-than-requests

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  PKG-INFO  README.md  benchmark.py  build-docker.sh  build.nims  build.sh  example.py  faster_than_requests.nim  faster_than_requests.nim.cfg  faster_than_requests.nimble  install2local4testing.sh  package.sh  package4pypi.sh  run-benchmark.sh  run-docker.sh  setup.cfg  setup.cfg.sav  setup.py  switches.py  upload2pypi.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml
.github/workflows/: add-stars.yml  build.yml  pypi_upload.yml  stale.yml  welcome-new-users.yml
docker/: Dockerfile  benchmark.py  server4benchmarks.nim
example/: example.py
examples/: bug125.py  bug126.py  bug161.py  bug45.py  bug55.py  bug63.py  bug65.py  download_retry.py  example.py  example2.py  example3.py  example4.py  example_head.py  image_scraper.py  multitag_web_scraper.py  multitag_web_scraper3.py  multitag_web_scrapper.py  multithread_web_scraper.py  multithread_web_scrapper.py  post_file.py  post_multipart.py  regex_scraper.py  sqlite_web_scraper.py  web_scraper_via_css_selectors.py  websocket_send_data.py  websocket_send_ping.py
faster_than_requests/: __init__.py  faster_than_requests.nim  faster_than_requests.nim.cfg
misc/: PKG-INFO
src/: faster_than_requests.nim  faster_than_requests.nim.cfg  faster_than_requests.nim.py  faster_than_requests.py  faster_than_requests_nossl.nim  gctricks.py  ws.nim
temp/: garbage.py
tests/: __init__.py  tests.py
tools/: package.nims
