# See: https://setuptools.readthedocs.io/en/latest/setuptools.html#metadata
[metadata]
name             = faster_than_requests
description      = Faster recursive os.walk replacement for Python.
url              = https://github.com/juancarlospaco/faster-than-requests
download_url     = https://github.com/juancarlospaco/faster-than-requests/releases
author           = Juan Carlos
author_email     = juancarlospaco@gmail.com
maintainer       = Juan Carlos
keywords         = python3, python4, cpython, speed, cython, rust, wasm, c, performance, compiled, native, fast, nim, requests, argentina, http, scraper, scraping, scrapinghub, httpie, httpx
license          = MIT
platforms        = Linux, Darwin, Windows
version          = 1.2.4

license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Other Environment
    Intended Audience :: Developers
    Intended Audience :: Other Audience
    Natural Language :: English
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development

[options]
zip_safe = True
include_package_data = True
python_requires  = >=3.8
packages         = find:

[bdist_egg]
exclude-source-files = false

[options.package_data]
* = *.c, *.h, nimbase.h

[options.exclude_package_data]
* = *.py, *.nim, *.so, *.md, *.dll, *.zip, *.js, *.tests, *.tests.*, tests.*, tests, README.md

[options.packages.find]
where   = .
include = *.c, *.h, nimbase.h
exclude = *.py, *.nim, *.so, *.dll, *.zip, *.js, *.tests, *.tests.*, tests.*, tests, README.md
