# See: https://setuptools.readthedocs.io/en/latest/setuptools.html#metadata
[options]
zip_safe = True
include_package_data = True
python_requires  = >=3.8
install_requires = nimporter
# setup_requires   = choosenim_install
packages         = find:

[options.package_data]
* = *.nim

[options.exclude_package_data]
* = *.py, *.pyc, *.so, *.md, *.dll, *.zip, *.js, *.tests, *.tests.*, tests.*, tests, README.md

[options.packages.find]
where   = .
include = *.nim
exclude = *.py, *.pyc, *.so, *.md, *.dll, *.zip, *.js, *.tests, *.tests.*, tests.*, tests, README.md

[metadata]
name             = faster_than_requests
description      = Faster & simpler requests replacement for Python
url              = https://github.com/juancarlospaco
author           = Juan Carlos
author_email     = juancarlospaco@gmail.com
keywords         = python3,python4,cpython,speed,cython,rust,wasm,c,performance,compiled,native,fast,nim,argentina,requests,httpx,httpie,scraper,scrapinghub,curl,wget,http,web,ssl
license          = MIT
platforms        = Linux,Darwin,Windows
license_file     = LICENSE
long_description = https://github.com/juancarlospaco/faster-than-requests#faster-than-requests
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Other Environment
    Intended Audience :: Developers
    Intended Audience :: Other Audience
    Natural Language :: English
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development
version = 9.9.9
